# KoHighlights

./: .gitignore  LICENSE  README.md  boot_config.py  gui_about.py  gui_about.ui  gui_auto_info.py  gui_auto_info.ui  gui_edit.py  gui_edit.ui  gui_edit_template.py  gui_edit_template.ui  gui_filter.py  gui_filter.ui  gui_main.py  gui_main.ui  gui_prefs.py  gui_prefs.ui  gui_status.py  gui_status.ui  gui_sync_group.py  gui_sync_group.ui  gui_sync_item.py  gui_sync_item.ui  gui_toolbar.py  gui_toolbar.ui  images.qrc  images_rc.py  main.py  pyproject.toml  requirements.txt  secondary.py  setup.py  slppu.py
docs/: KOHighlights User Guide.md  index.html  index.md
docs/images/: 1_2.tif  2_2.tif  8_2.tif  9_2.tif
